# akari_software

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  AKARI_MANUAL.desktop  LICENSE  README.md  akira.sh  build_akira.sh  pyproject.toml  pysen.toml
.github/actions/build-akira-images/: action.yml
.github/actions/build-akira-images-on-arm/: action.yml
.github/actions/push-docker-manifest/: action.yml
.github/workflows/: frontend-test.yml  misc-test.yml  python-test.yml  update-akira-images.yml
internal/akari_rpc_server/: setup.py
internal/akira/: go.mod  go.sum
internal/akira/daemon/: daemon.go  (+4 more)
internal/akira_controller_server/: requirements.txt  setup.py
internal/akira_frontend/: .gitignore  .prettierignore  aspida.config.js  eslintrc.js  openapiv2  package-lock.json  package.json  prettierrc.json
internal/akira_proto/: Makefile  buf.gen.yaml  buf.yaml
internal/akira_services/: docker-compose.image.yml
internal/docker/: Dockerfile  daemon-entrypoint.sh  docker-compose.dev.yml  docker-compose.v1.yml  env.sh
samples/akari_sample/: README.md
samples/depthai_sample/: README.md
samples/depthai_uvc/: LICENSE  depthai_uvc_rgb.py  requirements.txt  uvc_streamer.py
samples/m5serial_sample/: README.md  run.py
samples/remote_client_sample/: remote_m5_sample.py  remote_motor_sample.py
sdk/akari_autostart/: README.md
sdk/akari_client/: README.md  setup.py
sdk/akari_controller/: setup.py
sdk/akari_proto/: README.md  setup.py
sdk/akari_rpc/: setup.py
sdk/depthai_uvc/: depthai_uvc_depth.py  depthai_uvc_rgb.py
sdk/proto/: Makefile  README.md  buf.gen.yaml  buf.yaml
setup/: README.md
setup/ansible/: README.md  hosts.example  local.yml  run-ansible.py  system.yml
setup/arduino/: platformio.ini
setup/feetech/: 1_temp_change_id.py  2_change_id.py  3_change_baudrate.py  4_set_offset_pos.py  move_0pos.py  requirements.txt  search_ping.py  set_offset_pos.py
setup/script/: 1_mainpc_setup_libraries.sh  2_mainpc_setup_peripherals.sh  3_mainpc_setup_autostart.sh  tool_setup.sh
src/akari_controller/: README.md
tools/python/: baudrate_set.py  m5_init.py  m5_reset.py  servo_off.py  servo_start.py
(+309 files in other folders)
