[tool.poetry]
name = "akari_software"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dynamixel-sdk = "^3.7.31"
depthai = "^2.15.2"
akari-client = {path = "sdk/akari_client", develop = true}
akari-proto = {path = "sdk/akari_proto", develop = true}
opencv-python = "^4.5.5"
click = "8.0.4"
pyvirtualcam = "^0.9.1"

[tool.poetry.dev-dependencies]
black = "22.6.0"
flake8 = "^4.0.1"
isort = "^5.1.4"
mypy = "^0.790"
pysen = "^0.10.6"
pytest = "^7.1.2"
types-protobuf = "^5.29.1.20241207"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
